--- a/index.Rmd
+++ b/index.Rmd
@@ -31,7 +31,7 @@ create_footer()
 
 ### Course Information
 
-> * Title: MTH 201: Calculus I
+> * Title: MTH 201 Calculus I
 > * Section: E
 
 ### Instructor Information
@@ -39,8 +39,6 @@ create_footer()
 > * Instructor: Alex John Quijano
 > * Office: Buckley Center 279
 > * Email: quijano@up.edu
-
-If you want to learn more about me, please visit [alexjohnquijano.com](https://alexjohnquijano.com/){target="_blank"}.
 
 ### Lectures and Discussions
 
@@ -64,17 +62,17 @@ If you want to learn more about me, please visit [alexjohnquijano.com](https://a
 > Dr. Alex John Quijano
 >
 > <!-- Calendly inline widget begin -->
-<div class="calendly-inline-widget" data-url="https://calendly.com/alexjohnquijano?hide_landing_page_details=1&hide_gdpr_banner=1" style="min-width:320px;height:450px;"></div>
+<div class="calendly-inline-widget" data-url="https://calendly.com/alexjohnquijano?hide_landing_page_details=1&hide_gdpr_banner=1" style="min-width:auto;height:450px;"></div>
 <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
 <!-- Calendly inline widget end -->
 
 ### The Learning Commons
 
-Students can get academic assistance through Learning Commons tutoring services and workshops. The Co-Pilot peer tutoring program provides students with opportunities to work with other students to get help in writing, math, group projects, and other courses. Schedule an appointment to meet with a Co-Pilot (tutor) by visiting the Learning Commons website at [up.edu/learningcommons](www.up.edu/learningcommons){target="_blank"}. Students can also meet with a Co-Pilot during drop-in hours. Check the Learning Commons website or drop by the Learning Commons in BC 163 to learn more about their services. Find a tutor at the Learning Commons to get support on your academic journey.
+Students can get academic assistance through Learning Commons tutoring services and workshops. The Co-Pilot peer tutoring program provides students with opportunities to work with other students to get help in writing, math, group projects, and other courses. Schedule an appointment to meet with a Co-Pilot (tutor) by visiting the [Learning Commons](www.up.edu/learningcommons){target="_blank"} website. Students can also meet with a Co-Pilot during drop-in hours. Check the Learning Commons website or drop by the Learning Commons in BC 163 to learn more about their services. Find a tutor at the Learning Commons to get support on your academic journey.
 
 ### Math Resource Center
 
-Appointment-based tutoring accepts appointments starting week 1 and sessions start week 2. Visit the Math Resource Center website at  [up.edu/learningcommons/math-resource-center](https://www.up.edu/learningcommons/math-resource-center/index.html){target="_blank"} to sign-up for an appointment. Drop-in tutoring is Monday to Thursday, 3:00 PM - 6:30 PM in BC 163 and starts week 2. Check the Math Resource Center website or drop by the center for more information.
+Appointment-based tutoring accepts appointments starting week 1 and sessions start week 2. Visit the [Math Resource Center](https://www.up.edu/learningcommons/math-resource-center/index.html){target="_blank"} website to sign-up for an appointment. Drop-in tutoring is Monday to Thursday, 3:00 PM - 6:30 PM in BC 163 and starts week 2. Check the Math Resource Center website or drop by the center for more information.
 
 <br>
 
@@ -86,7 +84,7 @@ Appointment-based tutoring accepts appointments starting week 1 and sessions sta
 
 ### Homework
 
-> * Log in using your UP credentials at [webwork.up.edu/webwork2/MTH201Quijano-F23](https://webwork.up.edu/webwork2/MTH201Quijano-F23/){target="_blank"}.
+> * Log in using your UP credentials at [WeBWork MTH201Quijano-F23](https://webwork.up.edu/webwork2/MTH201Quijano-F23/){target="_blank"}
 
 ### Graphing Calculator
 
