--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -155,7 +155,7 @@ By the end of the semester you will be able to:
 > Dr. Alex John Quijano
 > 
 > * Walk-in MW at 9:45 AM - 11:10 AM, Buckley Center 279
-> * One-to-One, Buckley Center 279 or in Teams <br> [calendly.com/alexjohnquijano/helphours](https://calendly.com/alexjohnquijano/helphours){target="_blank"} <br> *Click on the link to sign-up for a 30-minute session.*
+> * [One-to-One, Buckley Center 279 or in Teams](https://calendly.com/alexjohnquijano/helphours){target="_blank"} <br> *Click on the link to sign-up for a 30-minute session.*
 
 My walk-in help hours start week 2. Note that you can bring a fellow student with you when you sign-up for a session. Just click the "Add Guests" link when you sign-up, and add in your fellow student's UP email. If you need more than 30 minutes, you can book at least two consecutive sessions.
 
