updated the citations and references

--- a/docs/pdfs/topics-pdf.Rmd
+++ b/docs/pdfs/topics-pdf.Rmd
@@ -12,6 +12,8 @@ output:
     toc: yes
     number_section: no
 urlcolor: blue
+bibliography: ../../references.bib
+csl: ../../apa.csl
 ---
 
 ```{r setup, include=FALSE}
@@ -20,7 +22,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 <br>
 
-> See Books & Online Resources List for the reading materials.
+> See Books & Online Resources Lists for the reading materials.
 >
 > The readings are not mandatory but it is encouraged.
 
@@ -39,67 +41,71 @@ knitr::opts_chunk$set(echo = TRUE)
 | **2** | M 9/4 | 2.1 Measuring Speed | TBA | Due: Section 1.8 | - | Pgs. 84-88 [CSV] |
 | - | W 9/6 | 2.2 Derivative at a Point | TBA | Due: Section 1.9 | - | Pgs. 91-95 [CSV] |
 | - | Th 9/7 | Lab 1: Limits and Continuity | - | - | Assigned: Lab 1 | - |
-| - | F 9/8 | Proficiency Quiz<br>L1, L2 | - | Due: Section 2.1 | Due: Lab 0 | - |
+| - | F 9/8 | **Proficiency Quiz<br>L1, L2** | - | Due: Section 2.1 | **Due: Lab 0** | - |
 | **3** | M 9/11 | 2.3 Derivative Function Preview | TBA | Due: Section 2.2 | - | Pgs. 99-104 [CSV] |
 | - | W 9/13 | 2.3 Derivative Function | TBA | - | - | - |
 | - | Th 9/14 | 2.4 Interpreting the Derivative | TBA | - | - | Pgs. 108-110 [CSV] |
-| - | F 9/15 | Proficiency Quiz<br>L2, L3, D1<br>Retakes: L1 | - | Due: Section 2.3 | Due: Lab 1 | - |
+| - | F 9/15 | **Proficiency Quiz<br>L2, L3, D1<br>Retakes: L1** | - | Due: Section 2.3 | **Due: Lab 1** | - |
 | **4** | M 9/18 | 2.5 Second Derivative | TBA | Due: Section 2.4 | - | Pgs. 115-119 [CSV] |
 | - | W 9/20 | 2.6 Differentiability | TBA | Due: Section 2.5 | - | Pgs. 123-126 [CSV] |
 | - | Th 9/21 | Lab 2: Corona Virus Cases | - | - | Assigned: Lab 2 | - |
-| - | F 9/22 | Proficiency Quiz<br>A1, D2<br>Retakes: L1, L2, L3, D1 | - | Due: Section 2.6 | - | - |
+| - | F 9/22 | **Proficiency Quiz<br>A1, D2<br>Retakes: L1, L2, L3, D1** | - | Due: Section 2.6 | - | - |
 | **5** | M 9/25 | 3.1 Powers and Polynomials | TBA | - | - | Pgs. 130-136 [CSV] |
 | - | W 9/27 | Review: Exponent Properties | TBA | Due: Section 3.1 | - | - |
 | - | Th 9/28 | 3.2 The Exponential Function | TBA | - | - | Pgs. 140-142 [CSV] |
-| - | F 9/29 | Proficiency Quiz<br>D1, D3<br>Retakes: L2, L3, D2, A1 | - | Due Exponent Review | Due: Lab 2 | - |
+| - | F 9/29 | **Proficiency Quiz<br>D1, D3<br>Retakes: L2, L3, D2, A1** | - | Due Exponent Review | **Due: Lab 2** | - |
 | **6** | M 10/2 | 3.3 Product and Quotient Rule | TBA | Due: Section 3.2 | - | Pgs. 144-147 [CSV] |
 | - | W 10/4 | 3.4 Chain Rule | TBA | Due: Section 3.3 | - | Pgs. 151-155 [CSV] |
 | - | Th 10/5 | Review: Trigonometry | TBA | - | - | - |
-| - | F 10/6 | Proficiency Quiz<br>D4, D5<br>Retakes: L2, D1, D2, D3, A1 | - | Due: Section 3.4 | - | - |
+| - | F 10/6 | **Proficiency Quiz<br>D4, D5<br>Retakes: L2, D1, D2, D3, A1** | - | Due: Section 3.4 | - | - |
 | **7** | M 10/9 | 3.5 Trig Functions | TBA | Due: Trig Review<br>Due: Inverses Review | - | Pgs. 158-162 [CSV] |
 | - | W 10/11 | 3.6 Chain Rule and Inverse Functions | TBA | Due: Section 3.5 | - | Pgs. 164-167 [CSV] |
 | - | Th 10/12 | Lab 3: All Derivative Rules | - | - | Assigned: Lab 3 | - |
-| - | F 10/13 | Proficiency Quiz<br>D5, D6<br>Retakes: D1, D3, D4 | - | Due: Section 3.6 | - | - |
-| **8** | M 10/16 | Fall Break | - | - | - | - |
-| - | W 10/18 | Fall Break | - | - | - | - |
-| - | Th 10/19 | Fall Break | - | - | - | - |
-| - | F 10/20 | Fall Break | - | - | - | - |
+| - | F 10/13 | **Proficiency Quiz<br>D5, D6<br>Retakes: D1, D3, D4** | - | Due: Section 3.6 | - | - |
+| **8** | M 10/16 | _Fall Break_ | - | - | - | - |
+| - | W 10/18 | _Fall Break_ | - | - | - | - |
+| - | Th 10/19 | _Fall Break_ | - | - | - | - |
+| - | F 10/20 | _Fall Break_ | - | - | - | - |
 | **9** | M 10/23 | 3.7 Implicit Differentiation | TBA | Due: Derivative Practice | - | Pgs. 171-173 [CSV] |
 | - | W 10/25 | 3.9 Linear Approximation | TBA | Due: Section 3.7 | - | Pgs. 178-182 [CSV] |
-| - | Th 10/26 | 4.1 Using Derivative | TBA | - | Due: Lab 3 | Pgs. 192-198 [CSV] |
-| - | F 10/27 | Proficiency Quiz<br>D7, D8<br>Retakes: D4, D5, D6 | - | Due: Section 3.9<br>Due: Section 3.10 | - | - |
+| - | Th 10/26 | 4.1 Using Derivative | TBA | - | **Due: Lab 3** | Pgs. 192-198 [CSV] |
+| - | F 10/27 | **Proficiency Quiz<br>D7, D8<br>Retakes: D4, D5, D6** | - | Due: Section 3.9<br>Due: Section 3.10 | - | - |
 | **10** | M 10/30 | 4.2 Optimization | TBA | Due: Section 4.1 | - | Pgs. 203-208 [CSV] |
 | - | W 11/1 | 4.3 Optimization Cont. | TBA | - | - | Pgs. 212-218 [CSV] |
 | - | Th 11/2 | Lab 4: Global Warming | - | - | Assigned: Lab 4 | - |
-| - | F 11/3 | Proficiency Quiz<br>A1, D8<br>Retakes: D5, D6, D7 | - | Due: Section 4.2 | - | - |
+| - | F 11/3 | **Proficiency Quiz<br>A1, D8<br>Retakes: D5, D6, D7** | - | Due: Section 4.2 | - | - |
 | **11** | M 11/6 | 4.3 Optimization | TBA | Due: Section 6.3 | - | - |
 | - | W 11/8 | 4.4 Families of Functions | TBA | Due: Section 4.3 | - | Pgs. 224-229 [CSV] |
-| - | Th 11/9 | 4.6 Related Rates | TBA | - | Due: Lab 4 | Pgs. 243-246 [CSV] |
-| - | F 11/10 | Proficiency Quiz<br>A2, A3<br>Retakes: D5, D7, D8, A1 | - | Due: Section 4.4 | - | - |
+| - | Th 11/9 | 4.6 Related Rates | TBA | - | **Due: Lab 4** | Pgs. 243-246 [CSV] |
+| - | F 11/10 | **Proficiency Quiz<br>A2, A3<br>Retakes: D5, D7, D8, A1** | - | Due: Section 4.4 | - | - |
 | **12** | M 11/13 | 4.6 Related Rates Cont. | TBA | - | - | - |
 | - | W 11/15 | 4.7 L'Hopital | TBA | Due: Section 4.6 | - | Pgs. 252-256 [CSV] |
 | - | Th 11/16 | 5.1 Distance Traveled | TBA | - | - | Pgs. 272-278 [CSV] |
-| - | F 11/17 | Proficiency Quiz<br>A2, A3<br>Retakes: Any | - | Due: Section 4.7<br>Due: Section 4.8 | - | - |
+| - | F 11/17 | **Proficiency Quiz<br>A2, A3<br>Retakes: Any** | - | Due: Section 4.7<br>Due: Section 4.8 | - | - |
 | **13** | M 11/20 | 5.2 Definite Integral | TBA | Due: Section 5.1 | - | Pgs. 283-288 [CSV] |
 | - | W 11/22 | Lab 5: Applications | - | Due: Section 5.2 | Assigned: Lab 5 | - |
-| - | Th 11/23 | Thanksgiving Vacation | - | - | - | - |
-| - | F 11/24 | Thanksgiving Vacation | - | - | - | - |
+| - | Th 11/23 | _Thanksgiving Vacation_ | - | - | - | - |
+| - | F 11/24 | _Thanksgiving Vacation_ | - | - | - | - |
 | **14** | M 11/27 | 5.3 Fundamental Theorem of Calculus Part 1 | TBA | - | - | Pgs. 292-297 [CSV] |
 | - | W 11/29 | 5.4 Theorems About Integrals | TBA | Due: Section 5.3 | - | Pgs. 302-309 [CSV] |
-| - | Th 11/30 | 6.1 Antiderivatives (Numerically & Graphically) | TBA | - | Due: Lab 5 | Pgs. 316-317 [CSV] |
-| - | F 12/1 | Proficiency Quiz<br>I1, I2<br>Retakes: L4, A2, A3, A4 | - | Due: Section 5.4 | - | - |
+| - | Th 11/30 | 6.1 Antiderivatives (Numerically & Graphically) | TBA | - | **Due: Lab 5** | Pgs. 316-317 [CSV] |
+| - | F 12/1 | **Proficiency Quiz<br>I1, I2<br>Retakes: L4, A2, A3, A4** | - | Due: Section 5.4 | - | - |
 | **15** | M 12/4 | 6.2 Antiderivatives (Analytically) | TBA | Due: Section 6.1<br>Due: Section 6.2 | - | Pgs. 322-326 [CSV] |
 | - | W 12/6 | 6.4 Fundamental Theorem of Calculus Part 2 | TBA | - | - | Pgs. 335-338 [CSV] |
 | - | Th 12/7 | Review | - | - | - | - |
-| - | F 12/8 | Proficiency Quiz<br>I2, I3<br>Retakes: L4, A2, A3, A4 | - | Due: Section 6.4 | - | - |
+| - | F 12/8 | **Proficiency Quiz<br>I2, I3<br>Retakes: L4, A2, A3, A4** | - | Due: Section 6.4 | - | - |
 | **-** | Tu 12/12 | Final Exam<br>Tu 10:30 AM - 12:30 PM | - | - | - | - |
 
 <br>
 
 ## **Books & Online Resources Lists**
 
+```{r echo=FALSE}
+refs <- bibtex::read.bib("../../references.bib")
+```
+
 ### Main Textbook
 
-[CSV] Calculus: Single Variable (7th ed), by Hughes-Hallett, Gleason, McCallum, et al (Wiley, 2009).
+[CSV] `r capture.output(print(refs["hughshallet2017"]))`
 
 <br>
