--- a/index.Rmd
+++ b/index.Rmd
@@ -4,6 +4,8 @@ author: |
   | MTH-201 Section E
   | University of Portland
   | Alex John Quijano
+bibliography: references.bib
+csl: apa.csl
 ---
 
 ```{r setup, include=FALSE}
@@ -36,7 +38,7 @@ create_footer()
 
 ### Instructor Information
 
-> * Instructor: Alex John Quijano
+> * Instructor: Dr. Alex John Quijano
 > * Office: Buckley Center 279
 > * Email: quijano@up.edu
 
@@ -80,7 +82,7 @@ Appointment-based tutoring accepts appointments starting week 1 and sessions sta
 
 ### Microsoft Teams
 
-> The Teams for this course is [mth-201e-sp23](https://teams.microsoft.com/l/team/19%3alkqkXlU1wUpfYFDLkmvNo5_UTVF6WdUH0XlhsM-hMKM1%40thread.tacv2/conversations?groupId=0478f5dc-fee7-44d1-b54c-e8d3664c9b3b&tenantId=ea8f3949-231c-40b6-a33f-56873af96f87){target="_blank"}. If you need the Teams code, use **601z214**.
+> The Teams for this course is [mth-201e-fa23](https://teams.microsoft.com/l/team/19%3alkqkXlU1wUpfYFDLkmvNo5_UTVF6WdUH0XlhsM-hMKM1%40thread.tacv2/conversations?groupId=0478f5dc-fee7-44d1-b54c-e8d3664c9b3b&tenantId=ea8f3949-231c-40b6-a33f-56873af96f87){target="_blank"}. If you need the Teams code, use **601z214**.
 
 ### Homework
 
@@ -99,6 +101,10 @@ My UP email is **quijano@up.edu**.
 
 ### Textbook
 
-Calculus: Single Variable (7th ed), by Hughes-Hallett, Gleason, McCallum, et al (Wiley, 2009).
+```{r echo=FALSE}
+refs <- bibtex::read.bib("references.bib")
+```
+
+`r capture.output(print(refs["hughshallet2017"]))`
 
 > It is not necessary to purchase the textbook.
