--- a/docs/pdfs/syllabus-pdf.Rmd
+++ b/docs/pdfs/syllabus-pdf.Rmd
@@ -236,12 +236,12 @@ Quizzes will be graded according to the standard rubric shown in the table below
 
 Labs will be graded on completeness, validity of the mathematics, the clarity of the explanations, and the quality of the use of representations to illustrate the mathematics based on the rubric. The table below shows the rubric on how the labs will be graded.
 
-|                                                                                                                                            | **Unable to Assess <br> (U)**        | **Not Yet Proficient <br> (NY)**                                                     | **Proficient <br> (P)**                                                                                    | **Highly proficient <br> (P+)**                                                                    |
-|--------------------------------------------------------------------------------------------------------------------------------------------|--------------------------------------|--------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------------------------------------------|
-| **Completeness**                                                                                                                           | No or minimal work                 | Most problems attempted, some complete solutions                                     | Most problems completed with full solutions and all problems attempted     All problems clearly labeled.   | All problems completed with full solution. All problems clearly labeled.                           |
-| **Validity: Is the mathematics correct?**                                                                                                  | No or minimal correct mathematics    | Contains one or more conceptual errors or several minor errors.                      | May contain a few minor errors but no big conceptual errors. Good use of mathematical language and symbols | All parts of all problems mathematically valid: strong use of mathematical language and symbols    |
-| **Representations: (Numbers, Symbols, Diagrams, Graphs, Words)**                                                                           | No or minimal use of representations | Multiple representations present, but may not capture the mathematics clearly        | Multiple representations used appropriately                                                                | Multiple representations are used when appropriate with clear links connecting the representations |
-| **Explanations and alternate solution methods: Are the explanations clear and logical? Are multiple ways to solve the problem presented?** | No or minimal explanation            | Explanations present, but incomplete or confusing. Alternate strategies are minimal. | Strong explanations for most problems. Alternate solution strategies included when needed                  | Strong explanations for every problem. Multiple solution paths included for some problems          |
+|  | **Unable to Assess <br> (U)** | **Not Yet Proficient <br> (NY)** | **Proficient <br> (P)** | **Highly proficient <br> (P+)** |
+|---|---|---|---|---|
+| **Completeness:** Are all problems attempted and have solutions? | No or minimal work. | Most problems attempted, some complete solutions. | Most problems completed with full solutions and all problems attempted. All problems clearly labeled. | All problems completed with full solution. All problems clearly labeled. |
+| **Validity:** Is the mathematics correct? | No or minimal correct mathematics. | Contains one or more conceptual errors or several minor errors. | May contain a few minor errors but no big conceptual errors. Good use of mathematical language and symbols. | All parts of all problems mathematically valid: strong use of mathematical language and symbols. |
+| **Representations:** (Numbers, Symbols, Diagrams, Graphs, Words) | No or minimal use of representations. | Multiple representations present, but may not capture the mathematics clearly. | Multiple representations used appropriately. | Multiple representations are used when appropriate with clear links connecting the representations. |
+| **Explanations and alternate solution methods:** Are the explanations clear and logical? Are multiple ways to solve the problem presented? | No or minimal explanation. | Explanations present, but incomplete or confusing. Alternate strategies are minimal. | Strong explanations for most problems. Alternate solution strategies included when needed. | Strong explanations for every problem. Multiple solution paths included for some problems. |
 
 ### Final Grades
 
@@ -278,7 +278,7 @@ If you have questions or concerns regarding the contents and how to log-in to We
 
 ### Labs
 
-Labs are assigned semi-weekly will be due on Thursdays at end-of-day. Lab problems should be either typed or written and submitted as a pdf file in Teams Assignments. These labs are part of the Core Assessment, and will have common grading across all MTH 202 sections. Labs will be graded on three components:
+Labs are assigned semi-weekly and will be due on Fridays at end-of-day. Lab problems should be either typed or written and submitted as a pdf file in Teams Assignments. These labs are part of the Core Assessment, and will have common grading across all MTH 202 sections. Labs will be graded on three components:
 
   * *Validity:* Is the method correct? Is the final solution correct?
   * *Explanation:* Is the solution method well explained? Is the reasonableness of the solution justified?
